[tool.poetry]
name = "mjgl-tools"
version = "0.1.0"
description = "Tools for the MJG League"
authors = ["woogers"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pytz = "^2021.1"
matplotlib = "^3.4.1"
configparser = "^5.0.2"
fonttools = "^4.22.1"

[tool.poetry.dev-dependencies]
black = "^21.4b0"
flake8 = "^3.9.1"
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"